Version 2.1.x - The "???" version
----------
2005-06-??

	GonoszTopi:
		* Ported the partfile importer from eMule.
		* Proper termination of working threads in webserver.

	Phoenix:
		* Removed wxGTK and wxGTK-devel dependencies from the spec
		  file. They don't work on all distros, even worse, don't always
		  work with Fedora Core.
		* Created a new spec file, compliant with Fedora Core.
		* Fixed a crash when aMule was shutdown by amulecmd and an
		  assert happened.

	volpol:
		* A4AF transfer speed display fix

	shakraw:
		* Merged with 2.0.3 latest fixes (r4630, r4631, r4633, r4639)
		
--------------------------------------------------------------------------------

Version 2.0.4 - The "..." version.
----------
2005-06-??

	GonoszTopi:
		* Fixed a small GUI glitch

	Seagull:
		* Fixed a small bug on client list view.

--------------------------------------------------------------------------------

Version 2.0.3 - The "Hell 2.0.3: Now with improved daemons!" version.
----------
2005-06-15

	ken:
		* Enabled amuleweb to work from within the Mac application bundle
		* Fixed Online Signature not actually being enabled when user sets the
		  preference

	Kry:
		* Fixed #471 "compile error". Should compile on GCC4 again.
		* Fixed Solaris compilation error on XParseGeometry.
		* Fixed wrong MD5 hash calculation on 64 bits arch.
		  This fixes storing the wrong EC/webserver password on config file.
		* Fixed unneeded GTK libs usage on aMule remote GUI.
		* Added a warning on gd-lib not found (progressbar not shown on amuleweb).

	lfroen:
		* New daemon socket code, event based. Improved reliability and 
		  speed problems fixed.

	volpol:
		* Fixed #417 "Upload priority is changed for completed files."
		* Added new display filter "Active"
		* Display of QR and aMule OS info in "Clients Details" dialog

	Xaignar:
		* Fixed warning on EC disabled for aMule daemon.

	Special Thanks To:

		* All the usual people. 